PBI #33077 fix the advanced search input text truncated issue.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_people.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_people.scss
@@ -65,8 +65,12 @@
 	margin-top: 20px;
 }
 
+.people-form-input input[type=text]{
+	height:auto;
+}
+
 .advanced-input {
-	font-size: 18px;
+	font-size: 15px;
 	position: relative;
 	overflow: hidden;
 	margin-top: 8px;
